made some changes

--- a/public/index.html
+++ b/public/index.html
@@ -14,4 +14,10 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style scoped>
+  body{
+    background:lightgrey;
+  }
+
+  </style>
 </html>
